--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,15 @@
 
     <dependencies>
     	
+    	
+
+	<dependency>
+    	<groupId>org.hamcrest</groupId>
+    	<artifactId>hamcrest-library</artifactId>
+    	<version>2.2</version>
+    	<scope>test</scope>
+	</dependency>
+
 		<dependency>
     		<groupId>org.jacoco</groupId>
     		<artifactId>jacoco-maven-plugin</artifactId>
